2011-03-11  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/Makefile.in (VC_MANIFEST_EMBED_DLL VC_MANIFEST_EMBED_EXE):
	* win/configure, win/configure.in, win/tcl.m4: SC_EMBED_MANIFEST macro.
	Merged --cherrypick from core-8-5-branch (2010-08-26, 3416226333358009f)

2011-01-25  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tkSelect.c:     [Bug 3129527]: Fix buffer overflow w/ GCC 4.5 and
	* generic/tkTextDisp.c    -D_FORTIFY_SOURCE=2. Just the strcpy->memcpy part,
	* unix/tkUnixWm.c         to prevent anything like [Bug #3164879]
	* win/tkWinWm.c

2011-01-13  Jan Nijtmans  <nijtmans@users.sf.net>

	* library/msgbox.tcl: [Patch #3154705] Close button has no
	effect. Add <Escape> binding as well (backported from Tcl 8.5)

2010-10-31  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/tcl.m4     Add -D_CRT_SECURE_NO_DEPRECATE and
	-D_CRT_NONSTDC_NO_DEPRECATE, reducing the number of
	deprecation warnings on later VC++ versions.
	* win/rules.vc   Better VCVERSION determination
	* win/configure  (regenerated with autoconf 2.13)
	All changes backported from Tcl8.5/8.6

2010-10-23  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/rules.vc          Update for VS10

2010-03-12  Jan Nijtmans  <nijtmans@users.sf.net>

    * generic/tkButton.h       [Bug 2956548] TkpButtonSetDefaults only
    * generic/tkButton.c       initializes one button type
    * win/tkWinButton.c
    * win/tkWinTest.c          Fix 2 minor gcc warnings
    * win/.cvsignore
    * doc/.cvsignore           Ignore man.macros

2010-02-17  Joe English  <jenglish@users.sourceforge.net>

	* generic/tkMenu.c: Defer TkMenuOptionTables cleanup
	to CallWhenDeleted() time, to ensure that the record
	doesn't get freed until after all widget instance commands
	have been deleted (Fixes [Bug#2952745]).

2010-01-23  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* library/bgerror.tcl: [TIP #359]: Extended Window Manager Hints
	* library/clrpick.tcl: backported from 8.5 for use on X11.
	* library/dialog.tcl: